Fix location of GPT header on 4K LBA devices.

BUG: 453333